--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     color: white;
-    margin: auto;
+    margin-top: 100px;
     padding-left: 20px;
 }
 .recipe-name{
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 10px;
-    
+    border-radius: 16px;
 }
 .recipe-info{
     padding-top: 10px;
@@ -22,22 +22,16 @@
     gap: 10px;
     font-size: 16px;
 }
-.recipe-ratings > p{
-    gap: 2px;
+
+.make-time {
+    display: flex;
+    gap: 5px;
+    align-items: center;
 }
 
-.star {
-    font-size: 15px;
-    color: gray; /* Default gray color */
-}
-
-.star.full {
-    color: gold; /* Full stars are gold */
-}
-
-.star.half {
-    background: linear-gradient(to right, gold 50%, gray 50%);
-    background-clip: text;
-    color: transparent;
+.recipe-ratings{
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
