--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,9 @@
   justify-content: center;
   margin: 0px auto 100px auto;
 }
+.loader{
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
