--- a/src/components/recipeSearchBar/recipeSearchBar.css
+++ b/src/components/recipeSearchBar/recipeSearchBar.css
@@ -23,6 +23,7 @@
     cursor: pointer;
     font-size: 16px;
     font-weight: bold;
+    margin-bottom: 50px;
 }
 .search-btn:hover{
     background-color:rgb(74, 245, 74);
